<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auth_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_login"
        app:layout_constraintBottom_toTopOf="@id/auth_pin_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/auth_pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_pin"
        app:layout_constraintBottom_toTopOf="@id/auth_sign_in"
        app:layout_constraintTop_toBottomOf="@id/auth_login_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/auth_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_pin_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>