<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <TextView
        android:id="@+id/average_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/average_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ride_distance"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_distance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/average_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/average_title" />

    <TextView
        android:id="@+id/average_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/average_speed"
        app:layout_constraintStart_toEndOf="@id/average_distance"
        app:layout_constraintTop_toBottomOf="@id/average_title"
        tools:text="1 day 08:30:53" />

    <TextView
        android:id="@+id/average_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/average_time"
        app:layout_constraintTop_toBottomOf="@id/average_title"
        tools:text="@string/ride_speed" />

</androidx.constraintlayout.widget.ConstraintLayout>