<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <TextView
        android:id="@+id/max_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/max_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/max_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ride_distance"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_distance"
        app:layout_constraintBottom_toBottomOf="@id/max_time"
        app:layout_constraintEnd_toStartOf="@id/max_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_title"
        app:layout_constraintTop_toTopOf="@id/max_time" />

    <TextView
        android:id="@+id/max_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_time"
        app:layout_constraintEnd_toStartOf="@id/max_speed"
        app:layout_constraintStart_toEndOf="@id/max_distance"
        app:layout_constraintTop_toBottomOf="@id/max_title"
        tools:text="1 day 08:30:53" />

    <TextView
        android:id="@+id/max_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_speed"
        app:layout_constraintBottom_toBottomOf="@id/max_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/max_time"
        app:layout_constraintTop_toTopOf="@id/max_time"
        tools:text="@string/ride_speed" />

    <TextView
        android:id="@+id/max_distance_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/max_distance"
        app:layout_constraintStart_toStartOf="@id/max_distance"
        app:layout_constraintTop_toBottomOf="@id/max_distance"
        tools:text="(352 - 385)\n01.05.22" />

    <TextView
        android:id="@+id/max_time_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/max_time"
        app:layout_constraintStart_toStartOf="@id/max_time"
        app:layout_constraintTop_toBottomOf="@id/max_time"
        tools:text="(352 - 385)\n01.05.22" />

    <TextView
        android:id="@+id/max_speed_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/max_speed"
        app:layout_constraintStart_toStartOf="@id/max_speed"
        app:layout_constraintTop_toBottomOf="@id/max_speed"
        tools:text="7.5 km / 00:20:00\n(385 - 352)\n01.05.22" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/max_single_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="max_distance_hint,max_time_hint,max_speed_hint" />

    <TextView
        android:id="@+id/max_day_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/max_day_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_single_barrier" />

    <TextView
        android:id="@+id/max_distance_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ride_distance"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_distance"
        app:layout_constraintBottom_toBottomOf="@id/max_time_day"
        app:layout_constraintEnd_toStartOf="@id/max_time_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_title"
        app:layout_constraintTop_toTopOf="@id/max_time_day" />

    <TextView
        android:id="@+id/max_time_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_time"
        app:layout_constraintEnd_toStartOf="@id/max_rides_day"
        app:layout_constraintStart_toEndOf="@id/max_distance_day"
        app:layout_constraintTop_toBottomOf="@id/max_day_title"
        tools:text="1 day 08:30:53" />

    <TextView
        android:id="@+id/max_rides_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_stats_rides"
        app:layout_constraintBottom_toBottomOf="@id/max_time_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/max_time_day"
        app:layout_constraintTop_toTopOf="@id/max_time_day"
        tools:text="16" />

    <TextView
        android:id="@+id/max_distance_day_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/max_distance_day"
        app:layout_constraintStart_toStartOf="@id/max_distance_day"
        app:layout_constraintTop_toBottomOf="@id/max_distance_day"
        tools:text="01.05.22" />

    <TextView
        android:id="@+id/max_time_day_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/max_time_day"
        app:layout_constraintStart_toStartOf="@id/max_time_day"
        app:layout_constraintTop_toBottomOf="@id/max_time_day"
        tools:text="01.05.22" />

    <TextView
        android:id="@+id/max_rides_day_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/max_rides_day"
        app:layout_constraintStart_toStartOf="@id/max_rides_day"
        app:layout_constraintTop_toBottomOf="@id/max_rides_day"
        tools:text="01.05.22" />

</androidx.constraintlayout.widget.ConstraintLayout>